--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,17 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
+
+  # Localization
+  intl: ^0.17.0
+
 dev_dependencies:
 
   flutter_lints: ^2.0.1
-  
-  flutter_test:
-    sdk: flutter
+  # Contains code to deal with internationalized/localized messages, date and number formatting and parsing, bi-directional text, and other internationalization issues.
+  intl_generator: ^0.4.1
 
 flutter:
   uses-material-design: true
