--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,10 @@ dependencies:
   # State management
   flutter_riverpod: 2.1.1
 
+  # Hive is a lightweight and blazing fast key-value database written in pure Dart
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
   # Localization
   intl: ^0.17.0
 
@@ -25,8 +29,9 @@ dependencies:
   riverpod_annotation: 1.0.6
 
 dev_dependencies:
-
+  build_runner: ^2.3.3
   flutter_lints: ^2.0.1
+  hive_generator: ^2.0.0
   # Contains code to deal with internationalized/localized messages, date and number formatting and parsing, bi-directional text, and other internationalization issues.
   intl_generator: ^0.4.1
   # A code generator for Riverpod. This both simplifies the syntax empowers it, such as allowing stateful hot-reload.
