--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,13 @@ dependencies:
   archethic_lib_dart: ^3.0.0
 
   # A client dart library to interact with Archethic Wallet RPC API.
-  archethic_wallet_client: ^1.0.3
+  archethic_wallet_client:
+    git:
+      url: https://github.com/archethic-foundation/archethic-wallet-client-dart.git
+      ref: dev
+
+  # A package that allows you to use a native file explorer to pick single or multiple absolute file paths, with extension filtering support.
+  file_picker: ^5.2.5
 
   flutter:
     sdk: flutter
