--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,8 +59,9 @@ dependencies:
   # Simple direct Service Locator that allows to decouple the interface from a concrete implementation and to access the concrete implementation from everywhere in your App
   get_it: ^7.2.0
 
-  # A library to perform Bash-style file and directory globbing.
-  glob: ^2.1.1
+  # PhoenixSocket provides a feature-complete implementation of Phoenix Sockets, using a single API based on StreamChannels compatible with any deployment of Flutter.
+  gql: ^0.14.0
+  graphql_flutter: ^5.1.2
 
   # Hive is a lightweight and blazing fast key-value database written in pure Dart
   hive: ^2.2.3
@@ -74,6 +75,9 @@ dependencies:
 
   # A string-based path manipulation library. All of the path operations you know and love, with solid support for Windows, POSIX (Linux and Mac OS X), and the web.
   path: ^1.8.2
+
+  # PhoenixSocket provides a feature-complete implementation of Phoenix Sockets, using a single API based on StreamChannels compatible with any deployment of Flutter
+  phoenix_socket: ^0.6.2
 
   # A package exposing annotations for riverpod_generator
   riverpod_annotation: 1.0.6
