--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   # State management
   flutter_riverpod: 2.1.1
 
+  # Provides a collection of Flutter grids layouts (staggered, masonry, quilted, woven, etc.).
+  flutter_staggered_grid_view: ^0.6.2
+
   # A tree widget for Flutter that can be used to display nested, hierarchical data. It includes a number of features like styling labels, icons, and import and export utilities.
   flutter_treeview: ^1.0.7+1
 
