--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,9 @@ dependencies:
   # A collection loading animations written in pure dart. Out of the box, no extra dependency.
   loading_indicator: ^3.1.0
 
+  # Flutter plugin for querying information about the application package, such as CFBundleVersion on iOS or versionCode on Android
+  package_info_plus: ^4.0.0
+
   # A string-based path manipulation library. All of the path operations you know and love, with solid support for Windows, POSIX (Linux and Mac OS X), and the web.
   path: ^1.8.2
 
