--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_animate: ^4.1.1+1
+
   flutter_localizations:
     sdk: flutter
 
@@ -139,6 +141,10 @@ flutter:
         - asset: assets/fonts/Caveat-Medium.ttf
         - asset: assets/fonts/Caveat-Regular.ttf
         - asset: assets/fonts/Caveat-SemiBold.ttf
+    - family: Equinox
+      fonts:
+        - asset: assets/fonts/Equinox Bold.otf
+        - asset: assets/fonts/Equinox Regular.otf
     - family: Montserrat
       fonts:
         - asset: assets/fonts/Montserrat-Black.ttf
