--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,9 @@ dependencies:
   # GraphQL tools for parsing, transforming and printing GraphQL documents.
   gql: ^0.14.0
 
+  # Gradient borders for inputs and containers. Borders package integrated with a basic flutter widgets as a container and input decorations. Easy in use, platform independent.
+  gradient_borders: ^1.0.0
+
   # A GraphQL client for Flutter, bringing all the features from a modern GraphQL client to one easy to use package
   graphql_flutter: ^5.1.2
 
