--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   # Compression
   archive: ^3.3.7
 
+  # Common util classes for Strings, Dates, X509, PKCS, Cryptographie and more.
+  basic_utils: ^5.5.4
+
   # Collections and utilities functions and classes related to collections.
   collection: ^1.17.0
 
