--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,18 +10,10 @@ environment:
 
 dependencies:
   # Archethic dart library for Flutter based on Official Archethic Javascript library for Node and Browser
-  #archethic_lib_dart: ^3.0.2
-  archethic_lib_dart:
-    git:
-      url: https://github.com/archethic-foundation/libdart.git
-      ref: aeweb
+  archethic_lib_dart: ^3.1.0
 
   # A client dart library to interact with Archethic Wallet RPC API.
-  #archethic_wallet_client: ^1.0.4
-  archethic_wallet_client:
-    git:
-      url: https://github.com/archethic-foundation/archethic-wallet-client-dart.git
-      ref: aeweb
+  archethic_wallet_client: ^1.0.5
 
   # Compression
   archive: ^3.3.7
