--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # Add beautiful animated effects & builders in Flutter, via an easy, customizable, unified API.
   flutter_animate: ^4.1.1+1
 
   flutter_localizations:
@@ -82,7 +83,11 @@ dependencies:
   hive_flutter: ^1.1.0
 
   # Iconsax for flutter (1000+ icons 6 diferent styles, total 6000+ icons).
-  iconsax: ^0.0.8
+  #iconsax: ^0.0.8
+  iconsax:
+    git:
+      url: https://github.com/redDwarf03/flutter_iconsax
+      ref: master
 
   # Contains code to deal with internationalized/localized messages, date and number formatting and parsing, bi-directional text, and other internationalization issues.
   intl: any
