--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,13 +82,6 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
 
-  # Iconsax for flutter (1000+ icons 6 diferent styles, total 6000+ icons).
-  #iconsax: ^0.0.8
-  iconsax:
-    git:
-      url: https://github.com/redDwarf03/flutter_iconsax
-      ref: master
-
   # Contains code to deal with internationalized/localized messages, date and number formatting and parsing, bi-directional text, and other internationalization issues.
   intl: any
 
@@ -152,3 +145,6 @@ flutter:
     - family: Roboto
       fonts:
         - asset: assets/fonts/RobotoMono-Regular.ttf
+    - family: Iconsax
+      fonts:
+        - asset: assets/fonts/Iconsax.ttf
