--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,13 @@ dependencies:
   crypto: ^3.0.3
 
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
 
   # A flutter package to let users easily add a dashed border around any widget.
   dotted_border: ^2.0.0+3
 
   # A package that allows you to use a native file explorer to pick single or multiple absolute file paths, with extension filtering support.
-  file_picker: ^5.3.0
+  file_picker: ^5.3.3
 
   # A package to get humanized file sizes. Translate raw file size into human readable strings
   filesize: ^2.0.1
@@ -43,25 +43,25 @@ dependencies:
     sdk: flutter
 
   # Add beautiful animated effects & builders in Flutter, via an easy, customizable, unified API.
-  flutter_animate: ^4.1.1+1
+  flutter_animate: ^4.2.0+1
 
   flutter_localizations:
     sdk: flutter
 
   # State management
-  flutter_riverpod: 2.1.1
+  flutter_riverpod: ^2.3.7
 
   # Provides a collection of Flutter grids layouts (staggered, masonry, quilted, woven, etc.).
-  flutter_staggered_grid_view: ^0.6.2
+  flutter_staggered_grid_view: ^0.7.0
 
   # An SVG rendering and widget library for Flutter, which allows painting and displaying Scalable Vector Graphics 1.1 files.
-  flutter_svg: ^2.0.5
+  flutter_svg: ^2.0.7
 
   # A tree widget for Flutter that can be used to display nested, hierarchical data. It includes a number of features like styling labels, icons, and import and export utilities.
   flutter_treeview: ^1.0.7+1
 
   # Annotations for freezed
-  freezed_annotation: ^2.2.0
+  freezed_annotation: ^2.4.1
 
   # Simple direct Service Locator that allows to decouple the interface from a concrete implementation and to access the concrete implementation from everywhere in your App
   get_it: ^7.6.0
@@ -89,38 +89,38 @@ dependencies:
   json_annotation: ^4.8.1
 
   # A collection loading animations written in pure dart. Out of the box, no extra dependency.
-  loading_indicator: ^3.1.0
+  loading_indicator: ^3.1.1
 
   # Flutter plugin for querying information about the application package, such as CFBundleVersion on iOS or versionCode on Android
-  package_info_plus: ^4.0.0
+  package_info_plus: ^4.1.0
 
   # A string-based path manipulation library. All of the path operations you know and love, with solid support for Windows, POSIX (Linux and Mac OS X), and the web.
-  path: ^1.8.2
+  path: ^1.8.3
 
   # PhoenixSocket provides a feature-complete implementation of Phoenix Sockets, using a single API based on StreamChannels compatible with any deployment of Flutter
-  phoenix_socket: ^0.6.3
+  phoenix_socket: ^0.6.4
 
   # A package exposing annotations for riverpod_generator
-  riverpod_annotation: 1.0.6
+  riverpod_annotation: ^2.1.2
 
   # Flutter plugin for launching a URL. Supports web, phone, SMS, and email schemes
-  url_launcher: ^6.1.11
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   # A build system for Dart code generation and modular compilation.
-  build_runner: ^2.3.3
+  build_runner: ^2.4.6
   # Recommended lints for Flutter apps, packages, and plugins to encourage good coding practices
-  flutter_lints: ^2.0.1
+  flutter_lints: ^2.0.2
   # Code generation for immutable classes that has a simple syntax/API without compromising on the features.
-  freezed: ^2.3.2
+  freezed: ^2.4.2
   # Extension for Hive. Automatically generates TypeAdapters to store any class.
-  hive_generator: ^2.0.0
+  hive_generator: ^2.0.1
   # Automatically generate code for converting to and from JSON by annotating Dart classes.
-  json_serializable: ^6.6.1
+  json_serializable: ^6.7.1
   # A code generator for Riverpod. This both simplifies the syntax empowers it, such as allowing stateful hot-reload.
-  riverpod_generator: 1.0.6
+  riverpod_generator: ^2.2.6
   # A full featured library for writing and running Dart tests across platforms.
-  test: ^1.23.0
+  test: ^1.24.6
 
 # The following section is specific to Flutter.
 flutter:
