--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,6 +101,9 @@ dependencies:
   # A package exposing annotations for riverpod_generator
   riverpod_annotation: ^2.1.2
 
+  # Bar indicator made of a series of selected and unselected steps
+  step_progress_indicator: ^1.0.2
+
   # Flutter plugin for launching a URL. Supports web, phone, SMS, and email schemes
   url_launcher: ^6.1.12
 
