--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,11 @@ environment:
 
 dependencies:
   # A client dart library to interact with Archethic Wallet RPC API.
-  #archethic_wallet_client: ^1.0.6
-  archethic_wallet_client:
-    git:
-      url: https://github.com/archethic-foundation/archethic-wallet-client-dart.git
-      ref: dev
+  archethic_wallet_client: ^1.0.7
+  #archethic_wallet_client:
+  #  git:
+  #    url: https://github.com/archethic-foundation/archethic-wallet-client-dart.git
+  #    ref: dev
 
   # Compression
   archive: ^3.3.7
