--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: aeweb
 description: Deploy websites on Archethic decentralized network to avoid censorship, increase security and have high-availability and resiliency.
 publish_to: "none"
 
-version: 0.0.10+7
+version: 0.0.10+8
 
 environment:
   sdk: ">=3.1.0 <4.0.0"
@@ -84,6 +84,9 @@ dependencies:
 
   # Classes and helper functions that support JSON code generation via the `json_serializable` package.
   json_annotation: ^4.8.1
+
+  # A Flutter plugin for rendering an animated and customizable starfield on a dark background.
+  lit_starfield: ^0.1.1
 
   # A collection loading animations written in pure dart. Out of the box, no extra dependency.
   loading_indicator: ^3.1.1
