--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -66,7 +66,7 @@ linter:
     - avoid_unnecessary_containers
     - avoid_unused_constructor_parameters
     - avoid_void_async
-    - avoid_web_libraries_in_flutter
+    # - avoid_web_libraries_in_flutter - desactivate for web project
     - await_only_futures
     - camel_case_extensions
     - camel_case_types
@@ -164,7 +164,7 @@ linter:
     - tighten_type_of_initializing_formals
     - type_annotate_public_apis
     - type_init_formals
-    # - unawaited_futures TODO(Chralu): to reactivate !
+    - unawaited_futures
     - unnecessary_await_in_return
     - unnecessary_brace_in_string_interps
     - unnecessary_const
@@ -185,7 +185,7 @@ linter:
     - unnecessary_string_interpolations
     - unnecessary_this
     - unrelated_type_equality_checks
-    # - use_build_context_synchronously
+    - use_build_context_synchronously
     - use_colored_box
     - use_decorated_box
     - use_enums
