--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,6 +99,9 @@ dependencies:
   # Flutter plugin for launching a URL. Supports web, phone, SMS, and email schemes
   url_launcher: ^6.2.5
 
+  # Flutter package that allows setting the web app URL strategy with a single line of code.
+  url_strategy: ^0.2.0
+
   # Wave animation
   wave: ^0.2.2
 
